@@ -50,7 +50,7 @@ public class LiveLogConfigurationPanel extends JPanel {
             try {
                 editorsProvider = (XDebuggerEditorsProvider) Class.forName(
                         "com.jetbrains.python.debugger.PyDebuggerEditorsProvider"
-                ).newInstance();
+                ).getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 throw new RuntimeException(ex);
             }
@@ -58,7 +58,7 @@ public class LiveLogConfigurationPanel extends JPanel {
             try {
                 editorsProvider = (XDebuggerEditorsProvider) Class.forName(
                         "org.jetbrains.java.debugger.JavaDebuggerEditorsProvider"
-                ).newInstance();
+                ).getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 throw new RuntimeException(ex);
             }
